@@ -24,7 +24,6 @@ import java.util.Optional;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import de.doubleslash.keeptime.common.ColorHelper;
@@ -160,7 +159,6 @@ public class ViewController {
 
    private ProjectsListViewController projectsListViewController;
 
-   @Autowired
    public ViewController(final Model model, final Controller controller) {
       this.model = model;
       this.controller = controller;
@@ -257,9 +255,11 @@ public class ViewController {
          textAreaColorRunnable.run();
 
          model.activeWorkItem.addListener((a, b, c) -> {
-            updateProjectView();
-            textArea.setText("");
-            textArea.requestFocus();
+            Platform.runLater(() -> {
+               updateProjectView();
+               textArea.setText("");
+               textArea.requestFocus();
+            });
          });
 
          model.defaultBackgroundColor.addListener((a, b, c) -> updateMainBackgroundColor.run());
@@ -299,7 +299,6 @@ public class ViewController {
                   .bind(Bindings.createStringBinding(
                         () -> DateFormatter.secondsToHHMMSS(activeWorkSecondsProperty.get()),
                         activeWorkSecondsProperty));
-
       // update ui each second
       new Interval(1).registerCallBack(() -> {
          final LocalDateTime now = LocalDateTime.now();
@@ -398,9 +397,7 @@ public class ViewController {
 
    private void setUpTextArea() {
       textArea.setWrapText(true);
-      textArea.setEditable(false);
-      textArea.editableProperty().bind(mouseHoveringProperty);
-
+      textArea.setEditable(true);
       textArea.textProperty().addListener((a, b, c) -> controller.setComment(textArea.getText()));
    }
 
@@ -476,7 +473,7 @@ public class ViewController {
       }
    }
 
-   private FXMLLoader createFXMLLoader(final RESOURCE fxmlLayout) {
+   public static FXMLLoader createFXMLLoader(final RESOURCE fxmlLayout) {
       return new FXMLLoader(Resources.getResource(fxmlLayout));
    }
 
@@ -497,7 +494,7 @@ public class ViewController {
       try {
          grid = loader.load();
       } catch (final IOException e) {
-         throw new FXMLLoaderException(String.format("Error while loading '%s'.", RESOURCE.FXML_MANAGE_PROJECT), e);
+         throw new FXMLLoaderException("Error while loading '%s'.".formatted(RESOURCE.FXML_MANAGE_PROJECT), e);
       }
 
       dialog.getDialogPane().setContent(grid);
@@ -505,6 +502,9 @@ public class ViewController {
       final ManageProjectController manageProjectController = loader.getController();
 
       dialog.getDialogPane().lookupButton(ButtonType.OK).disableProperty().bind(manageProjectController.formValidProperty().not());
+      dialog.getDialogPane().lookupButton(ButtonType.OK).getStyleClass().add("primary-button");
+      dialog.getDialogPane().lookupButton(ButtonType.CANCEL).getStyleClass().add("secondary-button");
+      dialog.getDialogPane().getStylesheets().add(Resources.getResource(Resources.RESOURCE.CSS_DS_STYLE).toExternalForm());
 
       dialogResultConverter(dialog, manageProjectController);
 
